vlib/v/checker/tests/division_by_zero_float_err.vv
fn main() {
	println(1.0/0.0)
}
